# coreset

./: .gitignore  Cargo.toml  README.md  Results.md  bmor.md  mp.rs
examples/: mnist_digits.rs  mnist_fashion.rs
examples/mnist/: check.rs  io.rs  iter.rs
examples/utils/: mnistcheck.rs  mnistio.rs  mnistiter.rs  mod.rs
fromhnsw/: Cargo.toml  README.md
fromhnsw/src/: getdatamap.rs  hnswiter.rs  lib.rs
merit/: Cargo.toml
merit/src/: affect.rs  contingency.rs
mnist/: Cargo.toml
mnist/src/: check.rs  io.rs
mnistcheck/: Cargo.toml
mnistcheck/src/: check.rs  io.rs  iter.rs  lib.rs
nmi/: Cargo.toml  Readme.md
nmi/src/: contingency.rs  lib.rs  mod.rs
src/: bmor.rs  clustercore.rs  discrete.rs  facility.rs  imp.rs  iterprovider.rs  lib.rs  makeiter.rs  mp.rs  prelude.rs  produceiter.rs  scale.rs  sensitivity.rs
src/fromhnsw/: README.md  hnswiter.rs  mod.rs
src/nmi/: affect.rs  contingency.rs  mod.rs
src/wkmedian/: kmedoid.rs  mod.rs
