[package]
name = "coreset"
version = "0.0.1"
authors = ["jeanpierre.both@gmail.com"]
description = "Coreset "
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["algorithms", "coreset", "robust median"]
repository = "https://github.com/jean-pierreBoth/coreset"
documentation = "https://docs.rs/coreset"
edition= "2021"


[lib]
# cargo rustc --lib -- --crate-type dylib [or staticlib] or rlib (default)
# if we want to avoid specifying in advance crate-type 
path = "src/lib.rs"


[[examples]]
name = "mnist_fashion"
path = "examples/mnist_fashion.rs"

[[examples]]
name = "mnist_digits"
path = "examples/mnist_digits.rs"


[dependencies]
# default is version spec is ^ meaning can update up to max non null version number
# cargo doc --no-deps avoid dependencies doc generation
#


clap = { version = "4.4", features = ["derive"] }

serde= {version = "1.0", features = ["derive"] }
bincode = {version = "1.3"}

# for //
parking_lot = "0.12"
rayon = {version = "1.6"}
dashmap = {version = "5.5"}
num_cpus = {version = "1.8.0"}

cpu-time = {version = "1.0"}


#hnsw_rs = {git = "https://github.com/jean-pierreBoth/hnswlib-rs", features = ["simdeez_f"]}
# hnsw_rs = {version = "0.2", features = ["simdeez_f"]}

hnsw_rs = {path = "../hnswlib-rs", features = ["simdeez_f"]}

# rand utilis
rand = {version = "0.8"}
rand_distr = {version = "0.4"}
rand_xoshiro = {version = "0.6"}
quantiles = {version = "0.7"}

num-traits = {version = "0.2"}
lazy_static = { version = "1.4"}

# decreasing order of log for debug build : (max_level_)trace debug info warn error off
# decreasing order of log for release build (release_max_level_)  .. idem
#log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }
log = { version = "0.4"}
env_logger = { version = "0.10"}

byteorder = {version = "1.4"}

# no more interaction bug with intel-mkl
anyhow = {version = "1.0"}
katexit = {version = "0.1"}

ndarray = {version = "0.15"}

[dev-dependencies]
kmedoids = {version = "0.5"}
#clustering = {version = "0.1"}
clustering = {git = "https://github.com/jean-pierreBoth/clustering", branch = "jpb"}