[package]
name = "coreset"
version = "0.0.1"
authors = ["jeanpierre.both@gmail.com"]
description = "Coreset "
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["algorithms", "coreset", "robust median"]
repository = "https://github.com/jean-pierreBoth/coreset"
documentation = "https://docs.rs/coreset"
edition = "2021"


[lib]
# cargo rustc --lib -- --crate-type dylib [or staticlib] or rlib (default)
# if we want to avoid specifying in advance crate-type 
path = "src/lib.rs"


[[examples]]
name = "mnist_fashion"
path = "examples/mnist_fashion.rs"

[[examples]]
name = "mnist_digits"
path = "examples/mnist_digits.rs"

[workspace]
members = ["fromhnsw"]

# common depencies versions
[workspace.dependencies]

clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "1.3" }

# for //
parking_lot = "0.12"
rayon = { version = "1.6" }
dashmap = { version = "5.5" }
indexmap = { version = "2.2" }
num_cpus = { version = "1.8.0" }
cpu-time = { version = "1.0" }

# rand utilis
rand = { version = "0.8" }
rand_distr = { version = "0.4" }
rand_xoshiro = { version = "0.6" }
quantiles = { version = "0.7" }

num-traits = { version = "0.2" }
lazy_static = { version = "1.4" }

anyhow = { version = "1.0" }
katexit = { version = "0.1" }

ndarray = { version = "0.15" }

#anndists = { version = "0.1" }
#anndists = { path = "../anndists" }
anndists = { git = "https://github.com/jean-pierreBoth/anndists" }
hnsw_rs = { git = "https://github.com/jean-pierreBoth/hnswlib-rs" }


# decreasing order of log for debug build : (max_level_)trace debug info warn error off
# decreasing order of log for release build (release_max_level_)  .. idem
#log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }
log = { version = "0.4" }
env_logger = { version = "0.11" }

# dependencies of main crate
# cargo doc --no-deps avoid dependencies doc generation
[dependencies]

clap = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }

# for //
parking_lot = { workspace = true }
rayon = { workspace = true }
dashmap = { workspace = true }
indexmap = { workspace = true }
num_cpus = { workspace = true }
cpu-time = { workspace = true }


# rand utilis
rand = { workspace = true }
rand_distr = { workspace = true }
rand_xoshiro = { workspace = true }
quantiles = { workspace = true }

num-traits = { workspace = true }
ndarray = { workspace = true }

lazy_static = { workspace = true }

# decreasing order of log for debug build : (max_level_)trace debug info warn error off
# decreasing order of log for release build (release_max_level_)  .. idem
#log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }
log = { workspace = true }
env_logger = { workspace = true }


anyhow = { workspace = true }
katexit = { workspace = true }


anndists = { workspace = true }


[dev-dependencies]
kmedoids = { version = "0.5" }
#clustering = {version = "0.1"}
clustering = { git = "https://github.com/jean-pierreBoth/clustering", branch = "jpb" }


[features]

default = ["simdeez_f"]

# feature for std simd on nightly
stdsimd = []
# feature for simd on stable for x86*
simdeez_f = ["anndists/simdeez_f"]
