[package]
name = "coreset"
version = "0.2.0"
authors = ["jeanpierre.both@gmail.com"]
description = "Coreset and (streaming) clustering"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["clustering", "coreset", "streaming", "information", "metric_spaces"]
repository = "https://github.com/jean-pierreBoth/coreset"
documentation = "https://docs.rs/coreset"
edition = "2024"


[lib]
# cargo rustc --lib -- --crate-type dylib [or staticlib] or rlib (default)
# if we want to avoid specifying in advance crate-type 
path = "src/lib.rs"

[[example]]
name = "mnist_digits"
path = "examples/mnist_digits.rs"


[[example]]
name = "mnist_fashion"
path = "examples/mnist_fashion.rs"

[[bin]]
name = "hnswcore"
path = "src/bin/hnswcore.rs"

[dependencies]

clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }

# for //
parking_lot = "0.12"
rayon = { version = "1.11" }
dashmap = { version = "6.1" }
indexmap = { version = "2.12" }
num_cpus = { version = "1.16" }
cpu-time = { version = "1.0" }

# rand utils
rand = { version = "0.10" }
rand_distr = { version = "0.6" }
rand_xoshiro = { version = "0.8" }
quantiles = { version = "0.7" }

num-traits = { version = "0.2" }
lazy_static = { version = "1.5" }

anyhow = { version = "1.0" }
katexit = { version = "0.1" }

ndarray = { version = ">=0.16.0, <0.18" }
nmi = {version = "0.1"}

anndists = { version = "0.1" }
#anndists = { path = "../anndists" }
#anndists = { git = "https://github.com/jean-pierreBoth/anndists" }

# hnsw_rs = { path = "../hnswlib-rs" }
hnsw_rs = { version = "0.3" }
# hnsw_rs = { git = "https://github.com/jean-pierreBoth/hnswlib-rs" }


# decreasing order of log for debug build : (max_level_)trace debug info warn error off
# decreasing order of log for release build (release_max_level_)  .. idem
#log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }
log = { version = "0.4" }
env_logger = { version = "0.11" }



[dev-dependencies]
# adhoc needs to check result
clustering = { version = "0.2.2", features=["parallel"] }
kmedoids = { version = "0.5.4" }
csv = { version = "1.3" }



[features]

default = []

# feature for std simd on nightly
stdsimd = ["anndists/stdsimd"]
# feature for simd on stable for x86*
simdeez_f = ["anndists/simdeez_f"]
