[package]
name = "fromhnsw"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hcore"
path = "src/bin/hnswcore.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

indexmap = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
cpu-time = { workspace = true }
env_logger = { workspace = true }
clap = { workspace = true }

#anndists provided by hnsw_rs
hnsw_rs = { workspace = true }

coreset = { path = "../" }
