[package]
name = "fromhnsw"
authors = ["jeanpierre.both@gmail.com"]
description = "Coreset and (streaming) clustering"
keywords = ["clustering", "coreset", "streaming", "hnsw", "metric_spaces"]
repository = "https://github.com/jean-pierreBoth/coreset"
documentation = "https://docs.rs/fromhnsw"
license = "MIT/Apache-2.0"
readme = "README.md"
edition = "2024"
version = "0.1.0"

[[bin]]
name = "hnswcore"
path = "src/bin/hnswcore.rs"

[dependencies]

indexmap = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
cpu-time = { workspace = true }
env_logger = { workspace = true }
clap = { workspace = true }
quantiles = { workspace = true }
rand = { workspace = true }

#anndists provided by hnsw_rs
hnsw_rs = { workspace = true }

coreset = { path = "../" }
