[package]
name = "mnist"
version = "0.1.1"
edition = "2024"

[lib]
# cargo rustc --lib -- --crate-type dylib [or staticlib] or rlib (default)
# if we want to avoid specifying in advance crate-type 
path = "src/lib.rs"

[[bin]]
name = "mnist_digits"
path = "src/bin/mnist_digits.rs"

[[bin]]
name = "mnist_fashion"
path = "src/bin/mnist_fashion.rs"


[dependencies]

indexmap = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
cpu-time = { workspace = true }
env_logger = { workspace = true }
clap = { workspace = true }
quantiles = { workspace = true }
ndarray = {workspace = true}
csv = {workspace = true}
anndists = {workspace = true}

rayon = {workspace = true}
# rand utils, version 0.8 needed by clustering
rand = { version = "0.8" }
rand_distr = { version = "0.4" }
rand_xoshiro = {version = "0.6"}

# adhoc needs to check result
clustering = { version = "0.2", features=["parallel"] }
kmedoids = { version = "0.5" }

coreset = { path = "../", version = "0.1" }

nmi = {path = "../nmi", version = "0.1"}
