[package]
name = "nmi"
author = ["jeanpierre.both@gmail.com"]
keywords = ["clustering", "quality", "mutual_information"]
description = "normalized mutual information"
repository = "https://github.com/jean-pierreBoth/coreset"
documentation = "https://docs.rs/nmi"
readme        = "Readme.md"
license       = "MIT OR Apache-2.0"
version = "0.1.1"
edition = "2024"

[lib]
# cargo rustc --lib -- --crate-type dylib [or staticlib] or rlib (default)
# if we want to avoid specifying in advance crate-type 
path = "src/lib.rs"


[dependencies]

indexmap = { workspace = true }
dashmap = { workspace = true }

ndarray = { workspace = true }
num-traits = { workspace = true }


anyhow = { workspace = true }
log = { workspace = true }
cpu-time = { workspace = true }
env_logger = { workspace = true }
clap = { workspace = true }
quantiles = { workspace = true }
rand = { workspace = true }
katexit = { workspace = true }
